--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,20 @@
+body{
+      background-image: url("/treasure.JPEG");
+}
+
+.button{
+    background-color: black;
+      color: white;
+      border: 5px solid pink;
+      border-radius: 2px;
+      font-size: 50px;
+     float: right;
+}
+
 
 .app {
     width: 306px;
-    margin:25px  auto
+    margin:25px  auto;
 }
 .board {
     display: flex;
